# rss-centr

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENTS.md  Cargo.toml  README.md  TODO.md  docker-compose.yml  justfile
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  dev.db  dev.db-shm  justfile
backend/.sqlx/: query-0176a21a11b86efdf92ffe8139f0c3cea968e6cae2f05a24a744f78e6b02409a.json  query-072621e21e7ba0f954d656d5190ea37af601d4962e6e223a02ef959a0dd8c8b3.json  query-0c97afa5c42db0136508312d5316dc8db8bfeff96255666e7f2ce6c8932ae40f.json  query-0dbee48720322db5702b86e554654690ef08fb6c8689c6b6ab2cf6e46f65af74.json  query-0e8ac8b594a20f77e5ac3608ac7398c81999883405a58feea4b781cbd4fa8f2d.json  query-137e326574207a003f525d8b6ccdca1a437ed6d7af0dd559c5bd394315dad2ca.json  query-28e07b2d0b89e31ee4dc5330f9558e6ecbd4cb6a88ac83f200b264f53f6b33ac.json  query-29d79dda3a6172d9036c93490283527b1ae651c8753e9108027d6751b7697e6f.json  query-2ba173c462d615e560f705211b7b445a77337c88eff4727c27762c83e0d699fa.json  query-464764fb6e3ca41bf5ee18d35e707aba0573ec635add77c16fee7d7fb05f9f6c.json  query-4935a0692c10b47fa6c7cba44835c1ee24579ae298bb1541cd43c273c6ef5f1e.json  query-4b0b23575d00105771a2cf2ffe8261b98fc36404ece1d24b250602ce8720592c.json  query-4da1d1b92312d5b0083ba828fb0f3b07f7b43c15e5d61684dc848304f99d4667.json  query-4f94e9f737173afa15058d5e2e5e3d3a397d813dc97dce47ae87be00f1811636.json  query-597cfd7642cea2ad0b46e92cfb2a4cfd77fd3126f28316b919ded8bda247e161.json  query-5c3f4b57d965c6d891bcf302f6a81d17b74b76a4224468281a021eddb6d5073d.json  query-61ffe5f1cfcae17a2a0f8a6b1a3e46930a5af4941af69b157954f3594fbf9ea8.json  query-6ba9f75210893beed0373fd8c503e180269070efc669a7db9df17a3787863577.json  query-6e3cbb623006393731c382a67fe435c106ae4f58c5f924007b1ce9c656f33555.json  query-7c671158c680cee5dca7e2b167e22084ad30b01843be06b115cf11a88d0434ca.json  query-8a4732428c00d7998961815ef372280d98c479671ff0a7e1dc344e84cc054153.json  query-953ead62388cfba99dcbb77ad7c52e7c8e536da3a28f9fb01998dda4119e98d3.json  query-9597c76dc087910d8408870274c447df97099e1661aab94e4a33021c6e03adc5.json  query-9d462bd19c19733c6730bff5c4cc164b07e52c18bcb178533df6e42e07def33d.json  query-a0b55c65266c885b60eee34c1ffe7e90f70026e8111a5dbd874fd976d8fa9184.json  query-a685ed0e39cb3952bd6ddd3eb1c235c3d5018931be7e194af489def66edb9b03.json  query-b0109153427ec50f73a02b75c0a809e9ab0fdf30819d091fdf87ccc957d1df0e.json  query-b0ae69b5491d096234512805926320904058d0a8bcea4c15290662688b66d8df.json  query-b54755ccdcfe1366ef189840b37fa2acb8dd415737ed770dfa33d5a2db143ea4.json  query-b68576005af83cea9cea7bace275937049825a4654d2d19ec4f4f03dfb0b48e7.json  query-bdf0e5b661f57db5fa82719f28160461e015b31d06db7626fc979b5cc2c2dc40.json  query-c0d76365415b47e466053f7512cec905b25c7acd8b7ddd4f7ab8c795ec02eec4.json  query-ca4ce0f8c618de14c4b35c87c93683db0cc396f5af758fa117685b60d6f69571.json  query-cf15f18e798d27c006fbbc6ba8d66ed7aaff02e3329ff685a3aedb8cc8adf1fb.json  query-d15b1acd83e91fa124c45d35e026afda0137df9557900048c4437d4360cccec4.json  query-d6a2671be383df6ee0fbee7ec7903ddd4cd1b539c46a11b74e1679329826343b.json  query-e63615c7b67a3019febe455ac8c6bf69372e805d942df8b043ad1d3ef1c318e9.json  query-e7eb2d315f3c027b8222b1df2e641708061e0b9cd8b216729987d7330cda031a.json  query-f5057f7b5a5b3051e780969b37626c7e425351a9b750fc2ca7dde313fd537247.json  query-f9a7a0e9677ac7a3511de393daf557be4d02e2600bae0da62f8541bce820f11d.json  (+1 more)
backend/migrations/: 20260212071731_create_feed_items.up.sql  20260212071733_create_feed_item_details.down.sql  20260212071733_create_feed_item_details.up.sql  20260212124126_create_feeds.up.sql  20260212124127_create_feed_items.down.sql  20260212124127_create_feed_items.up.sql  (+11 more)
backend/src/: main.rs  (+2 more)
worker/: Cargo.toml  Dockerfile
(+95 files in other folders)
