[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
feed-rs = "2.3.1"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }
tower = { version = "0.5.3", features = ["tracing"] }
tower-http = { version = "0.6.8", features = ["trace"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "tracing"] }
utoipa = { version = "5.4.0", features = ["chrono"] }
nom = "8.0.0"
