[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8.9", features = ["macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
feed-rs = "2.3.1"
metrics = "0.24.5"
metrics-exporter-prometheus = "0.18.3"
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "migrate"] }
tower = { version = "0.5.3", features = ["tracing"] }
tower-http = { version = "0.6.10", features = ["trace"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "tracing"] }
utoipa = { version = "5.5.0", features = ["chrono"] }
nom = "8.0.0"
tokio = { version = "1.52.3", features = ["full", "tracing"] }

[dev-dependencies]
http-body-util = "0.1.3"
