[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
feed-rs = "2.3.1"
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
reqwest = { version = "0.13.4", features = ["json"] }
rss-centr-core = { path = "../core" }
tokio = { version = "1.52.3", features = ["full", "tracing"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "tracing"] }

[dev-dependencies]
quickcheck = "1"
